wording eval summary

--- a/web/views/showEvaluations.ejs
+++ b/web/views/showEvaluations.ejs
@@ -101,7 +101,7 @@
 
 <H4>Search Evaluation, <%=imageEvals.length%> head-to-head contests</H4>
 
-<H5>Head-to-head pure win ratio</H5>
+<H5>Head-to-head pure win ratio as a percentage, draws ignored (as if they were not played)</H5>
 <TABLE style="border:1px solid rgba(128, 128, 128, 0.199)">
 
   <TR valign="top">
@@ -157,7 +157,7 @@
 </TABLE>
 
 
-<H5>Head-to-head win ratio (footy ladder, share draw points)</H5>
+<H5>Head-to-head win ratio as a percentage (footy ladder style where points for a draw are shared)</H5>
 <TABLE style="border:1px solid rgba(128, 128, 128, 0.199)">
 
   <TR valign="top">
