--- a/web/views/showSimilarityEvaluations.ejs
+++ b/web/views/showSimilarityEvaluations.ejs
@@ -11,9 +11,6 @@
 }
 
 
-
-
-
 </style>
 <div class="indent">
 
@@ -32,30 +29,22 @@
       return {awin: s.bwin, bwin:s.awin, ab:s.ab, anet: s.bnet, bnet:s.anet, count:s.count} ;
     }
 
-    const searchSets = [
-      {id:0,  desc: "CLIP", sseq:0},
-      {id:1,  desc: "Catalogue metadata keyword", sseq:1},
-      {id:2,  desc: "OpenAI description embedding", sseq:2},
-      {id:3,  desc: "Phi-3.5 Vision description embedding", sseq:3},
-      {id:4,  notSelectable: true, desc: "80% CLIP, 20% NLA metadata", sseq:-1},
-      {id:5,  notSelectable: true, desc: "50% CLIP, 50% NLA metadata", sseq:-1},
-      {id:6,  desc: "80% CLIP 20% OpenAI description embedding", sseq:4},
-      {id:7,  notSelectable: true, desc: "50% CLIP, 50% OpenAI", sseq:-1},
-      {id:8,  desc: "80% CLIP 20% Phi-3.5 Vision description embedding", sseq:5},
-      {id:9,  notSelectable: true, desc: "50% CLIP, 50% Phi-3.5", sseq:-1},
-      {id:10, desc: "50% CLIP, 30% OpenAI descr embedding, 20% Catalogue metadata keyword", sseq:6},
-      {id:11, desc: "50% CLIP, 30% Phi-3.5 Vision descr embedding, 20% Catalogue metadata keyword", sseq:7},
-      {id:12, notSelectable: true, desc: "Phi-3 Vision descr", sseq:-1}
+
+    const similaritySets = [
+  {id:0,  desc: "CLIP", matchField: "imageVector", sseq:0},
+  {id:1,  desc: "Catalogue metadata", matchField: "nomicMetadataEmbedding", sseq:1},
+  {id:2,  desc: "OpenAI description", matchField:"nomicOpenAIDescriptionEmbedding", sseq:2},
+  {id:3,  desc: "Phi-3.5 Vision description", matchField: "nomicMsVision35DescriptionEmbedding", sseq:3}
     ] ;
 
-    //const seqToSearchSet = [0, 1, 2, 3, 6, 8, 10, 11] ; // search sets used
-    const seqToSearchSet =   [1, 3, 0, 2, 8, 6, 11, 10] ; // search sets used
 
-    let searchScores = [] ;
-    for (let i=0;i<8;i++) {
+    const seqToSimilaritySet =   [1, 2, 3, 0] ; // sim sets used in the order we want
+
+    let similarityScores = [] ;
+    for (let i=0;i<4;i++) {
       let l = [] ;
-      for (let j=0;j<8;j++) l.push(genScore()) ;
-      searchScores.push(l) ;
+      for (let j=0;j<4;j++) l.push(genScore()) ;
+      similarityScores.push(l) ;
     } 
  
     // build scores
@@ -78,7 +67,7 @@
 
       let score = (eval.eval == "ab") ? 0 : Number(eval.eval.substring(1)) ;
  
-      let scores = searchScores[searchSets[a].sseq][searchSets[b].sseq] ;
+      let scores = similarityScores[similaritySets[a].sseq][similaritySets[b].sseq] ;
        
       scores.count++ ;
 
@@ -99,28 +88,28 @@
      
     %>
 
-<H4>Search Evaluation, <%=imageEvals.length%> head-to-head contests</H4>
+<H4>Similarity Evaluation, <%=imageEvals.length%> head-to-head contests</H4>
 
 <H5>Head-to-head pure win ratio as a percentage, draws ignored (as if they were not played)</H5>
 <TABLE style="border:1px solid rgba(128, 128, 128, 0.199)">
 
   <TR valign="top">
-    <TH>Model to evaluate</TH><TH colspan="8" style="border-bottom: 1px solid grey;">Opponents</TH><TH>&nbsp;&nbsp;</TH><TH>Overall</TH>
+    <TH>Model to evaluate</TH><TH colspan="4" style="border-bottom: 1px solid grey;">Opponents</TH><TH>&nbsp;&nbsp;</TH><TH>Overall</TH>
   </TR >
   <TR valign='top'>
     <TH></TH>
-    <% for (let seq of seqToSearchSet) {%>
-      <TH style="width:8.5em" xclass="vertical-header"><span><%=searchSets[seq].desc%></span></TH>
+    <% for (let seq of seqToSimilaritySet) {%>
+      <TH style="width:8.5em" xclass="vertical-header"><span><%=similaritySets[seq].desc%></span></TH>
     <%}%>    
   </TR>
 
-  <% for (let r of seqToSearchSet) { %>
+  <% for (let r of seqToSimilaritySet) { %>
     <TR valign="top">
-      <TD style="height:2em;width:21em"><B><%=searchSets[r].desc%></B></TD>
+      <TD style="height:2em;width:21em"><B><%=similaritySets[r].desc%></B></TD>
       <%
         let totScore = genScore() ;
-        for (let c of seqToSearchSet) {
-          let s = searchScores[searchSets[r>c?c:r].sseq][searchSets[r>c?r:c].sseq] ; 
+        for (let c of seqToSimilaritySet) {
+          let s = similarityScores[similaritySets[r>c?c:r].sseq][similaritySets[r>c?r:c].sseq] ; 
           if (r > c) s = flipScore(s) ;
                 
           if (r != c) {             
@@ -161,22 +150,22 @@
 <TABLE style="border:1px solid rgba(128, 128, 128, 0.199)">
 
   <TR valign="top">
-    <TH>Model to evaluate</TH><TH colspan="8" style="border-bottom: 1px solid grey;">Opponents</TH><TH>&nbsp;&nbsp;</TH><TH>Overall</TH>
+    <TH>Model to evaluate</TH><TH colspan="4" style="border-bottom: 1px solid grey;">Opponents</TH><TH>&nbsp;&nbsp;</TH><TH>Overall</TH>
   </TR >
   <TR valign='top'>
     <TH></TH>
-    <% for (let seq of seqToSearchSet) {%>
-      <TH style="width:8.5em" xclass="vertical-header"><span><%=searchSets[seq].desc%></span></TH>
+    <% for (let seq of seqToSimilaritySet) {%>
+      <TH style="width:8.5em" xclass="vertical-header"><span><%=similaritySets[seq].desc%></span></TH>
     <%}%>    
   </TR>
 
-  <% for (let r of seqToSearchSet) { %>
+  <% for (let r of seqToSimilaritySet) { %>
     <TR valign="top">
-      <TD style="height:2em;width:21em"><B><%=searchSets[r].desc%></B></TD>
+      <TD style="height:2em;width:21em"><B><%=similaritySets[r].desc%></B></TD>
       <%
         let totScore = genScore() ;
-        for (let c of seqToSearchSet) {
-          let s = searchScores[searchSets[r>c?c:r].sseq][searchSets[r>c?r:c].sseq] ; 
+        for (let c of seqToSimilaritySet) {
+          let s = similarityScores[similaritySets[r>c?c:r].sseq][similaritySets[r>c?r:c].sseq] ; 
           if (r > c) s = flipScore(s) ;
                 
           if (r != c) {             
@@ -220,17 +209,17 @@
 
   <TR valign="top">
     <TH></TH>
-    <% for (let seq of seqToSearchSet) {%>
-      <TH><%=searchSets[seq].desc%></TH>
+    <% for (let seq of seqToSimilaritySet) {%>
+      <TH><%=similaritySets[seq].desc%></TH>
     <%}%>
   </TR>
 
-  <% for (let r of seqToSearchSet) { %>
+  <% for (let r of seqToSimilaritySet) { %>
     <TR valign="top">
-      <TD nowrap><B><%=searchSets[r].desc%></B></TD>
+      <TD nowrap><B><%=similaritySets[r].desc%></B></TD>
 
-      <%for (let c of seqToSearchSet) {
-         let s = searchScores[searchSets[r>c?c:r].sseq][searchSets[r>c?r:c].sseq] ; 
+      <%for (let c of seqToSimilaritySet) {
+         let s = similarityScores[similaritySets[r>c?c:r].sseq][similaritySets[r>c?r:c].sseq] ; 
          if (r > c) s = flipScore(s) ;
         %>
         
@@ -256,17 +245,17 @@
 <TABLE border="1">
   <TR valign="top">
     <TH></TH>
-    <% for (let seq of seqToSearchSet) {%>
-      <TH><%=searchSets[seq].desc%></TH>
+    <% for (let seq of seqToSimilaritySet) {%>
+      <TH><%=similaritySets[seq].desc%></TH>
     <%}%>
   </TR>
 
-  <% for (let r of seqToSearchSet) { %>
+  <% for (let r of seqToSimilaritySet) { %>
     <TR valign="top">
-      <TD nowrap><B><%=searchSets[r].desc%></B></TD>
+      <TD nowrap><B><%=similaritySets[r].desc%></B></TD>
 
-      <%for (let c of seqToSearchSet) {
-         let s = searchScores[searchSets[r>c?c:r].sseq][searchSets[r>c?r:c].sseq] ; 
+      <%for (let c of seqToSimilaritySet) {
+         let s = similarityScores[similaritySets[r>c?c:r].sseq][similaritySets[r>c?r:c].sseq] ; 
          if (r > c) s = flipScore(s) ;
         %>
         <TD>
@@ -282,8 +271,8 @@
 </TABLE>
 
 
-<P>abSearchSets</P>
-<P><%= JSON.stringify(abSearchSets) %></P>
+<P>abSimilaritySets</P>
+<P><%= JSON.stringify(abSimilaritySets) %></P>
 
 <P>Normalised Data</P>
 <OL>
